IS-14 Source-service: minor fixes